--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -1,12 +1,14 @@
-.container {
+nav {
   display: flex;
-
   justify-content: space-between;
-
   background-color: gray;
+  background: linear-gradient(to bottom, black, transparent);
   align-items: center;
   width: 100%;
   color: white;
+  min-height: 60px;
+  position: sticky;
+  top: 0;
 }
 
 .logo {
@@ -24,14 +26,19 @@ li {
 }
 
 nav ul {
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   margin: 60px auto 10px;
+  /* background-color: aqua; */
 }
-nav ul li {
+nav ul.open {
   display: flex;
 }
+
+/* nav ul li {
+  display: flex;
+} */
 
 nav ul li a {
   color: white;
@@ -39,7 +46,12 @@ nav ul li a {
   justify-content: center;
   align-items: center;
   padding: 20px 20px;
+
   text-decoration: none;
+}
+
+nav ul li {
+  padding: 0 10px 0 10px;
 }
 nav ul li a:hover {
   background-color: yellow;
@@ -64,19 +76,25 @@ nav ul li a:hover {
 }
 @media screen and (min-width: 750px) {
   nav {
-    flex-direction: column;
-    align-items: flex-start;
+    flex-direction: row;
+    /* align-items: flex-start; */
   }
   nav ul {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
-    gap: 20px;
+    margin: 0 0;
+    /* gap: 20px; */
     font-size: medium;
-    margin: 0 auto;
+    align-items: right;
   }
-  nav ul .open {
+  nav ul li a:hover {
+    background-color: yellow;
+    width: auto;
+    height: 4px;
+  }
+
+  nav ul li {
     display: flex;
   }
   .burger {
