--- a/src/pages/home.module.css
+++ b/src/pages/home.module.css
@@ -8,6 +8,7 @@ section {
   height: 500px; /* Set the desired height */
   overflow: hidden;
   position: relative;
+  z-index: 1000;
 }
 
 .main_image {
